@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/youtube-dl
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.466 2015/04/08 13:12:47 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.467 2015/04/09 03:56:24 jer Exp $
+
+*youtube-dl-2015.04.09 (09 Apr 2015)
+
+  09 Apr 2015; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2015.04.09.ebuild:
+  Version bump.
 
   08 Apr 2015; Agostino Sarubbo <ago@gentoo.org> youtube-dl-2015.04.03.ebuild:
   Stable for amd64, wrt bug #545484
